_attachments/css/main.css
/* ==========================================================================
   Author's custom styles
   ========================================================================== */

body {
    color: #333;
    font-family: 'Gentium Book Basic' serif;
    font-size: 0.875em;
    line-height: 1.4em;
}

header {
    position: relative;
}

header nav {
    text-align: right;
    position: absolute;
    bottom: 0;
    right: 0;
}

h1, h2, h3, h4, h5 {
    font-family: 'Open Sans' sans-serif;
    font-weight: 800;
    text-transform: uppercase;
}

h1 {
    font-size: 4.43em;
    line-height: 0.9em;
}

h2 {
    font-size: 1.969em;
    letter-spacing: -0.05em;
    line-height: 0.9em;
}

h5 {
    display: run-in;
    font-size: 0.875em;
    letter-spacing: -0.05em;
    line-height: 1.4em;
}

h5:after {
    content: ' ';
}

header i {
    display: block;
    font-family: 'Gentium Book Basic' serif;
    font-size: 0.389em;
    text-transform: lowercase;
}

nav a,
nav a:visited {
    color: #333;
    display: inline-block;
    font-family: 'Open Sans' sans-serif;
    font-weight: 600;
    margin: 0.5em;
    text-decoration: none;
}

svg {
    display: block;
    font-family: 'Open Sans' sans-serif;
}

circle:hover {
    stroke: #333;
    stroke-width: 4;
}

.hidden {
    display: none;
}

.tooltip {
    background-color: #FFF;
    background-color: rgba(255, 255, 255, 0.95);
    box-shadow: 0 1px 6px;
    border-radius: 3px;
    padding: 0.5em;
    position: absolute;
}

.tooltip h3 {
    display: inline-block;
}

.tooltip .flag {
    float: left;
    margin-right: 1em;
    width: 100px;
}

.axis path,
.axis line {
  fill: none;
  stroke: #888;
  shape-rendering: crispEdges;
}

.axis text {
    fill: #888;
}

.axis .title {
    font-size: 0.875em;
}

.title {
    fill: #aaa;
    font-size: 1.969em;
    font-weight: 800;
    line-height: 0.9em;
    text-anchor: middle;
    text-transform: uppercase;
}

.label {
    text-anchor: middle;
}

.domain {
    display: none;
}

.axis .private-costs {
    fill: #eee;
    stroke: none;
}

.demographic {
    transition: opacity 500ms ease-in-out;
    -webkit-transition: opacity 500ms ease-in-out;
    -moz-transition: opacity 500ms ease-in-out;
    -o-transition: opacity 500ms ease-in-out;
    -ms-transition: opacity 500ms ease-in-out;
}

.unfocused {
    opacity: 0.2;
}

.costs .male.post-secondary .income-tax-effect,
.male.post-secondary .net-present-value {
    fill: #53A5B6;
}

.costs .male.tertiary .income-tax-effect,
.male.tertiary .net-present-value {
    fill: #0A527E;
}

.costs .female.post-secondary .income-tax-effect,
.female.post-secondary .net-present-value {
    fill: #E7BDC6;
}

.costs .female.tertiary .income-tax-effect,
.female.tertiary .net-present-value {
    fill: #CB7C97;
}

.demographic path {
    fill: #EEE;
    opacity: 0.9;
}

.benefits .direct-cost {
    fill: #424143;
}

.benefits .foregone-earnings {
    fill: #67666A;
}

.benefits .social-contribution {
    fill: #8C8B90;
}

.benefits .transfers-effect {
    fill: #CAC8D0;
}

.npv .demographic.average path {
    fill: #ddd;
    stroke: #888;
    stroke-width: 2;
    stroke-dasharray: 4, 3;
}

